Fix menu price alignments in wider width resolutions.

--- a/src/scss/blocks/_site-main.scss
+++ b/src/scss/blocks/_site-main.scss
@@ -360,10 +360,3 @@ button.order-online {
     width: 100vw;
   }
 }
-
-@media (min-width: 1280px) and (max-width: 1920px) {
-  .item__price {
-    grid-column: 3;
-    grid-row: 3;
-  }
-}
